# tts-cli

./: .cursorignore  .cursorindexignore  .gitignore  CLEANUP_PROGRESS.md  CLI_READINESS_CONFIRMATION.md  CONTRIBUTING.md  CURRENT_IMPLEMENTATION_STATUS.md  F5_TTS_COMPREHENSIVE_TESTING_REPORT.md  FINALIZATION_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  HIGGS_AUDIO_V2_SIMPLIFICATION_SUMMARY.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  LICENSE  PRD.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SETUP_INSTRUCTIONS.md  TESTING_FIRST_APPROACH.md  TESTING_PROGRESS_SUMMARY.md  VOICE_CLONING_FINAL_DEMONSTRATION.md  install-cli.py  install-cli.sh  kokoro-dependencies.txt  pyproject.toml  setup.py  setup.sh  test_cli_interface.py  test_results.md  testing-params.csv
.cursor/rules/: critical.mdc
.github/: FUNDING.yml
TESTING/INPUTS/: testing-text.txt
docs/: ADVANCED_FEATURES.md  README.md  TTS_MODEL_KNOWLEDGE_BASE.md  TTS_MODEL_KNOWLEDGE_BASE_REBUILD_PLAN.md  TTS_MODEL_SUMMARY.md  TTS_QUICK_REFERENCE.md  TTS_TESTING_CHECKLIST.md  TTS_VERIFICATION_SUMMARY.md
tts_cli/: cli.py  cli_tts.py
tts_cli/core/: __init__.py  environment_manager.py  model_registry.py
tts_cli/models/: __init__.py  base_model.py
tts_cli/testing/: __init__.py  model_tester.py  platform_detector.py
tts_cli/utils/: __init__.py
